--- a/css/style.css
+++ b/css/style.css
@@ -612,7 +612,7 @@
     right: 0;
     bottom: 0;
     background: rgba(0, 0, 0, 0.95);
-    z-index: 999999;
+    z-index: 2147483647;
     display: flex;
     align-items: center;
     justify-content: center;
